changed forms a bit

--- a/app/views/tutees/new.html.erb
+++ b/app/views/tutees/new.html.erb
@@ -58,13 +58,9 @@
   <h1> Sign Up</h1>
 </div>
 <div class="row">
-  <div class="col-md-3 col-md-offset-3">
-    
-  </div>
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@tutee_person, url: signup_path) do |f| %>
-
-<%= render 'shared/tutee_error_maybe' %>
+      <%= render 'shared/tutee_error_maybe' %>
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
       
@@ -72,13 +68,12 @@
       <%= f.email_field :email, class: 'form-control' %>
       
       <%= f.label :grade %>
-      <%= f.text_field :grade, class: 'form-control' %>
-  <!--   <select class = "form-control" name="Contact[email_provider]">
-        <option>9</option>
-        <option>10</option>
-        <option>11</option>
-        <option>12</option>
-      </select>  -->
+       <select class = "form-control" name="Contact[email_provider]">
+          <option>9</option>
+          <option>10</option>
+          <option>11</option>
+          <option>12</option>
+        </select>
       
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
