--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -19,6 +19,24 @@
           <li class="nav-item">
             <a class="nav-link" href="/studygroup">Study Group</a>
           </li>
+          
+          <!--<li class="nav-item">-->
+          <!--  <li><%= link_to "Tutor", '#' %></li> -->
+          <!--</li>-->
+          <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Account
+              </button>
+            <ul class="dropdown-menu">
+              <li class = "dropdown-item"><%= link_to "Profile", current_tutor %></li>
+              <li><%= link_to "Settings", '#' %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Log out", '#', method: :delete %>
+              </li>
+            </ul>
+          </div>
+       
         </ul>
       <a class="navbar-brand" href="/home">CV Enterprises</a>
       </div>
