Not sure why but it's making me commit

--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -35,24 +35,15 @@
                 <%= link_to "Log out", '#', method: :delete %>
               </li>
             </ul>
-          </div>
-       
-        </ul>
+      </ul>
+      <a class="navbar-brand" href="/home">CV Enterprises</a>
+      </div>
+    </nav>
+    
   <div class="large_content" id="large_content">
     <h1> Sign Up</h1>
   </div>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(:tutee) do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
-      <br>
-      <%= f.label :grade %>
-      <select class = "form-control" name="Contact[email_provider]">
-  </div>
-  <div class="large_content" id="large_content">
-  <h1> Sign Up</h1>
-</div>
   <div class="row">
     <div  class="col-md-6 col-md-offset-3">
       <%= form_for(@tutor_person, url: tutorsignup_path) do |f| %>
@@ -82,6 +73,7 @@
   
         <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
+   
   </div>
 </div>
 </div>
