--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -38,17 +38,15 @@
       </ul>
       <a class="navbar-brand" href="/home">CV Enterprises</a>
       </div>
-    </nav>
+  </nav>
     
   <div class="large_content" id="large_content">
     <h1> Sign Up</h1>
   </div>
 <div class="row">
-<<<<<<< HEAD
   <div class="row">
     <div  class="col-md-6 col-md-offset-3">
       <%= form_for(@tutor_person, url: tutorsignup_path) do |f| %>
-=======
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(:tutee) do |f| %>
       <%= f.label :name %>
@@ -89,3 +87,4 @@
   </div>
 </div>
 </div>
+<% end %>
