--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -1,9 +1,53 @@
 <% provide(:title, "Edit tutor") %>
+
+<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item" id="hmenu" onclick="openNav()">
+          	<div class="hmenu"> </div>
+          	<div class="hmenu"> </div>
+          	<div class="hmenu"> </div>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link"  id="active" href="/home">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+          	<a class="nav-link" href="/about">About</a>
+          </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/help">Help</a>
+          </li>
+          
+          <% if logged_in? %>
+          <li><%= link_to "Tutors", '#' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", current_tutor %></li>
+              <li><%= link_to "Settings", edit_tutor_path(current_tutor) %></li>
+              <li class="divider"></li>
+            
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Log in", login_path %></li>
+        <% end %>
+      </ul>
+        
+        </ul>
+      <a class="navbar-brand" href="/home">CV Enterprises</a>
+    </div>
+  </nav>
+
 <h1>Update your profile</h1>
+
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
+    <%= form_for(@person) do |f| %>
       <%= render 'shared/error_messages' %>
 
       <%= f.label :name %>
@@ -22,7 +66,7 @@
     <% end %>
 
     <div class="gravatar_edit">
-      <%= gravatar_for @tutor_person %>
+      <%= gravatar_for @person %>
       <a href="http://gravatar.com/emails" target="_blank">change</a>
     </div>
   </div>
