Some basic authorization stuff done

--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 
-<% if @person.errors.any? %>
+<% if @tutor_person.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
       The form contains <%= pluralize(@person.errors.count, "error") %>.
