--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
           </li>
           
           <% if logged_in? %>
-          <li><%= link_to "Tutors", '#' %></li>
+          <li><%= link_to "Tutors", 'tutors_path' %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
