--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -5,7 +5,7 @@
   	<script src="jquery-3.3.1.min.js"></script>
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<% provide(:title, 'All tutors') %>
+
 <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -23,7 +23,7 @@
           </li>
           
           <!--<li class="nav-item">-->
-          <!--  <li><%= link_to "Tutor", '#' %></li> -->
+          <!--  <li><%= link_to "Tutor", 'tutors_path' %></li> -->
           <!--</li>-->
           <div class="dropdown">
               <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -43,17 +43,12 @@
       </div>
 </nav>
 
-<h1>All tutors</h1>
+<h1>All tutors</h1>]
 
 <%= will_paginate %>
 
 <ul class="tutors">
-  <% @people.each do |person| %>
-    <li>
-      <%= gravatar_for person, size: 50 %>
-      <%= link_to person.name, person %>
-    </li>
-  <% end %>
+  <%= render @people %>
 </ul>
 
 <%= will_paginate %>
