add admin attribute to people only (not tutors) and some authorization changes

--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -25,7 +25,7 @@
           <!--</li>-->
           <div class="dropdown">
               <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Account
+                Account 
               </button>
             <ul class="dropdown-menu">
               <li class = "dropdown-item"><%= link_to "Profile", current_tutor %></li>
@@ -44,7 +44,7 @@
 <div class="large_content" id="large_content">
     <h1> Sign Up</h1>
   <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" id="overwrite" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn btn-secondary dropdown-toggle" id="lettercolor" type="button" id="dropdownMenuButton" id="overwrite" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Account
     </button>
     <ul class="dropdown-menu">
