Added link to update profile page for tutors, fixed some bugs, changed some backgrounds

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -370,3 +370,15 @@ center{
 #lettercolor{
 	color: black;
 }
+.login_background{
+	background-image: url("https://images.pexels.com/photos/956981/milky-way-starry-sky-night-sky-star-956981.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+	
+	background-size: 100%;
+}
+#bob{
+	color: white;
+}
+#not_taken{
+	background-image: url("https://fcit.usf.edu/matrix/wp-content/uploads/2016/12/blur-1866562_wide.jpg");
+	background-size: 100%;
+}
