--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -61,8 +61,18 @@
 
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
-
+      
+      <div>
+        <p></p>
+      </div>
+      
       <%= f.submit "Save changes", class: "btn btn-primary" %>
+      
+      <div>
+        <p>
+        </p>
+      </div>
+      
     <% end %>
 
     <div class="gravatar_edit">
