--- a/app/views/static_pages/studygroup.html.erb
+++ b/app/views/static_pages/studygroup.html.erb
@@ -52,7 +52,7 @@
       <th scope="row">3</th>
       <td>Adarsh</td>
       <td>Chinchilla</td>
-      <td>@Ardash</td>
+      <td>@legend</td>
     </tr>
   </tbody>
 </table>
