--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -41,7 +41,8 @@
  </nav>
  
 <% provide(:title, @tutor_person.name) %>
-<div class="row">
+<body id="not_taken">
+<div class="row" id="not_taken">
   <aside class="col-md-4">
     <section class="tutor_info">
       <h1>
@@ -53,3 +54,4 @@
     </section>
   </aside>
 </div>
+</body>
