--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -42,11 +42,11 @@
     </div>
   </nav>
 
-<h1>Update your profile</h1>
+<h1 id="martin">Update your profile</h1>
 
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<div id="martin" class="row">
+  <div id="bob"  class="col-md-6 col-md-offset-3">
     <%= form_for(@person) do |f| %>
       <%= render 'shared/error_messages' %>
 
@@ -61,7 +61,7 @@
 
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
-      
+  
       <div>
         <p></p>
       </div>
