--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,11 +7,11 @@
 	<script src="jquery-3.3.1.min.js"></script>
 </head>
 <body id="body">
-	<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link"  id="active" href="/home">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link active" href="/home">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
           	<a class="nav-link" href="/about">About</a>
@@ -24,7 +24,7 @@
             <a class="nav-link" href="/studygroup">Study Group</a>
           </li>
         </ul>
-      <a class="navbar-brand" href="/home">CV Enterprises</a>
+      <a class="navbar-brand" href="/login">Login</a>
       </div>
     </nav>
 	<div class="large_content">
@@ -34,13 +34,13 @@
 		</div>
 			
 		<a href="/signup">
-				<button id="button"> Find a Tutor</button>	
+				<button id="button" class="button-responsive"> Find a Tutor</button>	
 		</a>
 		<a href="/login">
-			<button id="tutor"> Login </button>
+			<button id="tutor" class="button-responsive"> Login </button>
 		</a>
 		<a href="/tutorsignup">
-			<button id="tutor"> I'm a Tutor</button>	
+			<button id="tutor" class="button-responsive"> I'm a Tutor</button>	
 		</a>
  	</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
@@ -53,6 +53,5 @@
 	 	 	</p>
  	 	</div>
  	</center>
- 	<div class="filler"></div>
 </body>
 </html>
