--- a/app/views/static_pages/studygroup.html.erb
+++ b/app/views/static_pages/studygroup.html.erb
@@ -20,7 +20,7 @@
             <a class="nav-link" href="/studygroup">Study Group</a>
           </li>
         </ul>
-      <a class="navbar-brand" href="/home">CV Enterprises</a>
+      <a class="navbar-brand" href="/login">Login</a>
       </div>
     </nav>
 <div class="large_content" id="large_content">
