--- a/app/views/tutees/new.html.erb
+++ b/app/views/tutees/new.html.erb
@@ -50,7 +50,7 @@
         <a class="nav-link" href="/studygroup">Study Group</a>
       </li>
     </ul>
-  <a class="navbar-brand" href="/home">CV Enterprises</a>
+  <a class="navbar-brand" href="/login">Login</a>
   </div>
 </nav>
 
