Made and rolled back a subject model

--- a/app/views/people/edit.html.erb
+++ b/app/views/people/edit.html.erb
@@ -42,7 +42,8 @@
     </div>
   </nav>
 
-<h1 id="martin">Update your profile</h1>
+
+<h1 id="martin"><div style="background-color:lightgrey; opacity: 0.96; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 70% 0% -1%; border-radius:25px;"> Update your profile </h1>
 
 
 <div id="martin" class="row">
