--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -30,7 +30,7 @@
 	<div class="large_content">
 		<div class="container">
 			<h1 id="homeh1">Tutor Matching</h1>
-			<p id="homep">This is the home page for the Tutor Matching page. Click the button below to sign up to be a tutor! </p>		
+			<p id="homep">Welcome to the Tutor Matching home page! Click the button below to sign up or login. </p>		
 		</div>
 			
 		<a href="/signup">
