Changed some error messages stuff

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -454,3 +454,6 @@ center{
 	background-image: url("https://img1.akspic.com/image/114418-skyscraper-architect-modern_architecture-day-glass-1280x1024.jpg");
 	background-size: 100%;
 }
+#center_save_changes{
+	text-align:center;
+}
