--- a/app/views/tutors/new.html.erb
+++ b/app/views/tutors/new.html.erb
@@ -63,7 +63,7 @@
   
     <div  class="col-md-6 col-md-offset-3">
     <%= form_for(@tutor_person, url: tutorsignup_path) do |f| %>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages_tutor_people' %>
         <%= f.label :name %>
         <%= f.text_field :name, class: 'form-control' %>
         
