--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -371,10 +371,6 @@ center{
 #lettercolor{
 	color: black;
 }
-<<<<<<< HEAD
-
-=======
->>>>>>> fc760c55c61c171eee74f8a419a5512f88619ae1
 .defaultlink{
 	color: #0645AD;
 }
@@ -466,6 +462,7 @@ center{
 }
 #not_taken h1{
 	color: white;
+}
 #center_save_changes{
 	text-align:center;
 }
