--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -50,10 +50,29 @@
           <div id="bob">
           <%= @tutor_person.name %>
           <%= @tutor_person.email %>
-          
+            
           <div><p></p></div>
           
           <%= link_to "Edit Profile", edit_person_path(current_person), {:style=>"color:#fff;"} %>
+          <div><p></p></div>
+          <table style="width:240%">
+            <tr>
+              <th>Subject</th>
+              <th>Date</th> 
+              <th>Rate</th>
+            </tr>
+            <tr>
+              <td> <%= @tutor_person.name %></td>
+              <td> <%=  %> </td> 
+              <td><%=  %></td>
+            </tr>
+            <tr>
+              <td><%=  %></td>
+              <td><%=  %></td> 
+              <td><%= %></td>
+            </tr>
+          </table>
+
           </div>
         </h1>
       </section>
