--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -33,7 +33,7 @@
             <li><%= link_to "Settings", '#' %></li>
             <li class="divider"></li>
             <li>
-              <%= link_to "Log out", '#', method: :delete %>
+              <!--  <(delete_this_message with parentheses when uncommenting)%= link_to "Log out", '#', method: :delete %> -->
             </li>
           </ul>
       </ul>
