--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -62,7 +62,7 @@
               <th>Rate</th>
             </tr>
             <tr>
-              <td> <%= @tutor_person.name %></td> 
+              <td> <%= @tutor_person.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) -->
               <td> <%=  %> </td> 
               <td><%=  %></td>
             </tr>
