Who really knows at this point tbh

--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -29,7 +29,7 @@
               Account
             </button>
           <ul class="dropdown-menu">
-            <li class = "dropdown-item"><%= link_to "Profile", current_tutor %></li>
+            <li class = "dropdown-item"><%= link_to "Profile", current_person %></li>
             <li><%= link_to "Settings", '#' %></li>
             <li class="divider"></li>
             <li>
@@ -72,7 +72,13 @@
               <td><%= %></td>
             </tr>
           </table>
-
+            <div class="idk">
+            	<a href="#">
+			        	<button id="button" class="button-responsive"> Create Subject</button>	
+	          	</a>
+           </div>
+          
+          
           </div>
         </h1>
       </section>
