--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -3,55 +3,79 @@
   	<script src="jquery-3.3.1.min.js"></script>
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-          	<a class="nav-link" href="/about">About</a>
-          </li>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/help">Help</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/studygroup">Study Group</a>
-          </li>
-          
-          <!--<li class="nav-item">-->
-          <!--  <li><%= link_to "Tutor", '#' %></li> -->
-          <!--</li>-->
-          <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Account
-              </button>
-            <ul class="dropdown-menu">
-              <li class = "dropdown-item"><%= link_to "Profile", current_tutor %></li>
-              <li><%= link_to "Settings", '#' %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "Log out", '#', method: :delete %>
-              </li>
-            </ul>
+<body id="not_taken">
+  <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+        	<a class="nav-link" href="/about">About</a>
+        </li>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/help">Help</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/studygroup">Study Group</a>
+        </li>
+        
+        <!--<li class="nav-item">-->
+        <!--  <li><%= link_to "Tutor", '#' %></li> -->
+        <!--</li>-->
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Account
+            </button>
+          <ul class="dropdown-menu">
+            <li class = "dropdown-item"><%= link_to "Profile", current_person %></li>
+            <li><%= link_to "Settings", '#' %></li>
+            <li class="divider"></li>
+            <li>
+              <%= link_to "Log out", '#', method: :delete %>
+            </li>
+          </ul>
       </ul>
       <a class="navbar-brand" href="/home">CV Enterprises</a>
-      </div>
- </nav>
- 
-<% provide(:title, @tutor_person.name) %>
-<body id="not_taken">
-<div class="row" id="not_taken">
-  <aside class="col-md-4">
-    <section class="tutor_info">
-      <h1>
-        <%= gravatar_for @tutor_person %>
-        <br></br>
-        <%= @tutor_person.name %>
-        <%= @tutor_person.email %>
-      </h1>
-    </section>
-  </aside>
-</div>
+    </div>
+  </nav>
+  <% provide(:title, @tutor_person.name) %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="tutor_info">
+        <h1>
+          <%= gravatar_for @tutor_person %>
+          <br></br>
+          <div id="bob">
+          <%= @tutor_person.name %>
+          <%= @tutor_person.email %>
+            
+          <div><p></p></div>
+          
+          <%= link_to "Edit Profile", edit_person_path(current_person), {:style=>"color:#fff;"} %>
+          <div><p></p></div>
+          <table style="width:240%">
+            <tr>
+              <th>Subject</th>
+              <th>Date</th> 
+              <th>Rate</th>
+            </tr>
+            <tr>
+              <td> <%= @tutor_person.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) -->
+              <td> <%=  %> </td> 
+              <td><%=  %></td>
+            </tr>
+            <tr>
+              <td><%=  %></td>
+              <td><%=  %></td> 
+              <td><%= %></td>
+            </tr>
+          </table>
+
+          </div>
+        </h1>
+      </section>
+    </aside>
+  </div>
 </body>
