--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -72,13 +72,12 @@
               <td><%= %></td>
             </tr>
           </table>
-            <div class="idk">
-            	<a href="#">
+          <div>
+            <p></p>
+          </div>
+            <a href="/subject/new">
 			        	<button id="button" class="button-responsive"> Create Subject</button>	
-	          	</a>
-           </div>
-          
-          
+	         	</a>
           </div>
         </h1>
       </section>
