--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -49,7 +49,7 @@
 <div id="martin" class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@subject) do |f| %>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages_subject' %>
 
 <div style="background-color:lightgrey; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 5%% 0% -1%; border-radius:25px;">
       <%= f.label :name %>
