--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -377,10 +377,13 @@ center{
 	}
 }
 @media screen and (max-width: 600px){
+	.navbar{
+		padding-bottom: 10px!important;
+	}
 	.large_content{
-		min-height: 100vh;
 		width: 100vw;
-		padding: 0px;
+		padding-top: 0px;
+		padding-bottom: 50px;
 		background-image: url("https://images.pexels.com/photos/956981/milky-way-starry-sky-night-sky-star-956981.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 		background-repeat: no-repeat;
 		background-size: cover;
