--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,50 +10,49 @@
 </head>
 <body id="body">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar w/ text</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="/about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
+        <a class="nav-link" href="/help">Help</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/studygroup">Study Group</a>
       </li>
     </ul>
-    <span class="navbar-text">
-      Navbar text with an inline element
-    </span>
   </div>
 </nav>
-	<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link active" href="/home">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-          	<a class="nav-link" href="/about">About</a>
-          </li>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/help">Help</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/studygroup">Study Group</a>
-          </li>
-           <li class="nav-item">
-            <a class="nav-link" href="/login">Log in</a>
-          </li>
-        </ul>
-      <a class="navbar-brand" href="/login">Login</a>
-      </div>
-    </nav>
+	<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
+ <!--     <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
+ <!--       <ul class="navbar-nav mr-auto">-->
+ <!--         <li class="nav-item">-->
+ <!--           <a class="nav-link active" href="/home">Home <span class="sr-only">(current)</span></a>-->
+ <!--         </li>-->
+ <!--         <li class="nav-item">-->
+ <!--         	<a class="nav-link" href="/about">About</a>-->
+ <!--         </li>-->
+ <!--         </li>-->
+ <!--         <li class="nav-item">-->
+ <!--           <a class="nav-link" href="/help">Help</a>-->
+ <!--         </li>-->
+ <!--         <li class="nav-item">-->
+ <!--           <a class="nav-link" href="/studygroup">Study Group</a>-->
+ <!--         </li>-->
+ <!--          <li class="nav-item">-->
+ <!--           <a class="nav-link" href="/login">Log in</a>-->
+ <!--         </li>-->
+ <!--       </ul>-->
+ <!--     <a class="navbar-brand" href="/login">Login</a>-->
+ <!--     </div>-->
+ <!--   </nav>-->
 	<div class="large_content">
 		<div class="container">
 			<h1 id="homeh1">Tutor Matching</h1>
