--- a/app/views/static_pages/studygroup.html.erb
+++ b/app/views/static_pages/studygroup.html.erb
@@ -3,29 +3,27 @@
   	<script src="jquery-3.3.1.min.js"></script>
 </head>
 <% provide(:title, 'Study Group') %>
-<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-          	<a class="nav-link" href="/about">About</a>
-          </li>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/help">Help</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="/studygroup">Study Group</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Log in</a>
-          </li>
-        </ul>
-      <a class="navbar-brand" href="/login">Login</a>
-      </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/help">Help</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/studygroup">Study Group</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 <div class="large_content" id="large_content">
   <h1>Find Other Students</h1>
 </div>
