--- a/app/views/tutees/new.html.erb
+++ b/app/views/tutees/new.html.erb
@@ -33,15 +33,17 @@
 	</script>
 </head>
 <% provide(:title, 'Register') %>
-<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link"  id="active" href="/home">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-      	<a class="nav-link" href="/about">About</a>
-      </li>
+        <a class="nav-link" href="/about">About</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/help">Help</a>
@@ -50,7 +52,6 @@
         <a class="nav-link" href="/studygroup">Study Group</a>
       </li>
     </ul>
-  <a class="navbar-brand" href="/login">Login</a>
   </div>
 </nav>
 
