--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -3,7 +3,7 @@
   	<script src="jquery-3.3.1.min.js"></script>
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<body id="not_taken">
+<body id="not_taken" style="font-family: Signika">
   <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
@@ -75,9 +75,9 @@
           <div>
             <p></p>
           </div>
-            <a href="/subject/new">
-			        	<button id="button" class="button-responsive"> Create Subject</button>	
-	         	</a>
+          <a href="/subjectcreate">
+            <button type="button" class="btn btn-primary" id="createsubjectbutton">Create Subject</button>
+          </a>
           </div>
         </h1>
       </section>
