--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -3,12 +3,7 @@
 <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item" id="hmenu" onclick="openNav()">
-          	<div class="hmenu"> </div>
-          	<div class="hmenu"> </div>
-          	<div class="hmenu"> </div>
-          </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link"  id="active" href="/home">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
@@ -20,18 +15,30 @@
           </li>
           
           <% if logged_in? %>
-          <li><%= link_to "Tutors", '#' %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Tutors</a>
+          </li>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Account 
+            </button>
+            <ul class="dropdown-menu" id="createsubjectdropdown">
               <li><%= link_to "Profile", current_tutor %></li>
               <li><%= link_to "Settings", edit_tutor_path(current_tutor) %></li>
               <li class="divider"></li>
-            
             </ul>
-          </li>
+          </div>
+          <!--<li class="dropdown">-->
+          <!--  <a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
+          <!--    Account <b class="caret"></b>-->
+          <!--  </a>-->
+          <!--  <ul class="dropdown-menu">-->
+              <!--<li><%= link_to "Profile", current_tutor %></li>-->
+          <!--    <li><%= link_to "Settings", edit_tutor_path(current_tutor) %></li>-->
+          <!--    <li class="divider"></li>-->
+            
+          <!--  </ul>-->
+          <!--</li>-->
         <% else %>
           <li><%= link_to "Log in", login_path %></li>
         <% end %>
@@ -42,8 +49,12 @@
     </div>
   </nav>
 
-
-<h1 id="martin"><div style="background-color:lightgrey; opacity: 0.96; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 75% 0% -1%; border-radius:25px;"> Create a subject</h1></div>
+<div class="large_content">
+		<div class="container">
+			<h1 id="homeh1">Create a Subject</h1>
+		</div>
+</div>
+<!--<h1 id="martin"><div style="background-color:lightgrey; opacity: 0.96; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 75% 0% -1%; border-radius:25px;"> Create a subject</h1></div>-->
 
 
 <div id="martin" class="row">
@@ -51,7 +62,7 @@
     <%= form_for(@subject, url: subjectcreate_path) do |f| %>
       <%= render 'shared/error_messages_subject' %>
 
-<div style="background-color:lightgrey; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 5%% 0% -1%; border-radius:25px;">
+<div style=" text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 5%% 0% -1%; border-radius:25px;">
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
 
