--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -51,7 +51,7 @@
 
 <body id="martin">
 
-<h1 id="martin"><div style="background-color:lightgrey; opacity: 0.96; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 83% 0% -1%; border-radius:25px;"> Create a subject</h1></div>
+<!--<h1 id="martin"><div style="background-color:lightgrey; opacity: 0.96; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 83% 0% -1%; border-radius:25px;"> Create a subject</h1></div>-->
 
 <div class="large_content">
 		<div class="container">
