Temproarily change some stuff for meeting with Mrs. Benitez

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -493,8 +493,8 @@ center{
 	background-size: 100%;
 }
 #martin{
-	// background-image: url("https://img1.akspic.com/image/114418-skyscraper-architect-modern_architecture-day-glass-1280x1024.jpg");
-	// background-size: 100%;
+	 background-image: url("https://img1.akspic.com/image/114418-skyscraper-architect-modern_architecture-day-glass-1280x1024.jpg");
+	 background-size: 100%;
 }
 #not_taken{
 	height: 100vh;
