--- a/app/views/tutors/show.html.erb
+++ b/app/views/tutors/show.html.erb
@@ -3,7 +3,7 @@
   	<script src="jquery-3.3.1.min.js"></script>
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
-<body id="not_taken">
+<body id="not_taken" style="font-family: Signika">
   <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
@@ -40,16 +40,16 @@
       <a class="navbar-brand" href="/home">CV Enterprises</a>
     </div>
   </nav>
-  <% provide(:title, @tutor_person.name) %>
+  <% provide(:title, @person.name) %>
   <div class="row">
     <aside class="col-md-4">
       <section class="tutor_info">
         <h1>
-          <%= gravatar_for @tutor_person %>
+          <%= gravatar_for @person %>
           <br></br>
           <div id="bob">
-          <%= @tutor_person.name %>
-          <%= @tutor_person.email %>
+          <%= @person.name %>
+          <%= @person.email %>
             
           <div><p></p></div>
           
@@ -62,7 +62,7 @@
               <th>Rate</th>
             </tr>
             <tr>
-              <td> <%= @tutor_person.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) -->
+              <td> <%= @person.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) -->
               <td> <%=  %> </td> 
               <td><%=  %></td>
             </tr>
@@ -72,7 +72,12 @@
               <td><%= %></td>
             </tr>
           </table>
-
+          <div>
+            <p></p>
+          </div>
+          <a href="/subjectcreate">
+            <button type="button" class="btn btn-primary" id="createsubjectbutton">Create Subject</button>
+          </a>
           </div>
         </h1>
       </section>
