another set of css changes, changed button design

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -45,6 +45,9 @@ button:focus{
 	background-size: cover;
 	width: 100%;
 }
+.large_content a{
+	width: auto;
+}
 .large_content h1{
 	color: white;
 	font-weight: bold;
@@ -68,16 +71,36 @@ button:focus{
 	text-align: center;
 	display: inline-block;
 }
-.large_content button{
-	font-family: Lato;
-	font-size: 22px;
-	margin-top: 30px;
-	width: 7em;
-	height: 3em;
-	border-radius: 5em;
-	background-color: white;
+#animatedbutton{
+	// font-family: Lato;
+	// font-size: 22px;
+	// margin-top: 30px;
+	// width: 7em;
+	// height: 3em;
+	// border-radius: 5em;
+	// background-color: white;
+	// transition: 0.3s;
+	// padding: 10px 10px;
+	color: black;
+	
+	margin: 20px auto;
+	display: block;
+	padding: 14px 10px;
+	background-color: rgba(255, 255, 255, 1);
+	text-align: center;
+	width: 200px;
+	outline: blue;
+	border: 2px solid #3498db;
+	border-radius: 24px;
 	transition: 0.3s;
-	padding: 10px 10px;
+}
+#animatedbutton:hover{
+	text-decoration: none;
+	width: 280px;
+	transition: 0.3s;
+	border-color: #2ecc71;
+	background-color: #222222;
+	color: white;
 }
 .idk{
 	font-family: Lato;
@@ -301,7 +324,7 @@ a:hover{
 .col-md-6{
 	padding: 50px;
 	text-align: center;
-	max-width: 30%;
+	max-width: 30% !important;
 	margin: auto;
 }
 h1{
@@ -390,7 +413,7 @@ center{
 		background-image: none;
 	}
 	.col-md-6{
-		max-width: 90%;
+		max-width: 80%!important;
 	}
 }
 @media screen and (max-width: 600px){
@@ -523,4 +546,11 @@ table, th, td {
 }
 #createsubjectdropdown{
 	padding: 10px;
+}
+#createsubjectlargecontent{
+	background-image: url("https://img1.akspic.com/image/114418-skyscraper-architect-modern_architecture-day-glass-1280x1024.jpg");
+}
+#createsubjecth1{
+	color: rgb(100,255,0);
+	text-shadow: 1px 1px red;
 }
