--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -59,14 +59,17 @@
 			<p id="homep">Welcome to the Tutor Matching home page! Click the button below to sign up or login. </p>		
 		</div>
 			
-		<a href="/signup">
-				<button id="button" class="button-responsive"> Find a Tutor</button>	
+		<a href="/signup" id="animatedbutton">
+		  Find a Tutor
+				<!--<button id="button" class="button-responsive"> Find a Tutor</button>	-->
 		</a>
-		<a href="/login">
-			<button id="tutor" class="button-responsive"> Login </button>
+		<a href="/login" id="animatedbutton">
+		  Login
+			<!--<button id="tutor" class="button-responsive"> Login </button>-->
 		</a>
-		<a href="/tutorsignup">
-			<button id="tutor" class="button-responsive"> I'm a Tutor</button>	
+		<a href="/tutorsignup" id="animatedbutton">
+		  I'm a Tutor
+			<!--<button id="tutor" class="button-responsive"> I'm a Tutor</button>	-->
 		</a>
  	</div>
  	<!-- <button id="top" onload ="hide()" onclick="topFunction()" >Top</button> -->
