--- a/app/views/subject/new.html.erb
+++ b/app/views/subject/new.html.erb
@@ -49,9 +49,9 @@
     </div>
   </nav>
 
-<div class="large_content">
+<div class="large_content" id="createsubjectlargecontent">
 		<div class="container">
-			<h1 id="homeh1">Create a Subject</h1>
+			<h1 id="createsubjecth1">Create a Subject</h1>
 		</div>
 </div>
 <!--<h1 id="martin"><div style="background-color:lightgrey; opacity: 0.96; text-align:left; vertical-align: middle; padding:15px 15px; margin: 1% 75% 0% -1%; border-radius:25px;"> Create a subject</h1></div>-->
