--- a/app/views/tutees/new.html.erb
+++ b/app/views/tutees/new.html.erb
@@ -82,7 +82,7 @@
       <%= f.label :password_confirmation, "Re-enter password" %>
       <%= f.password_field :password_confirmation, class: 'form-control', id: 'bottominput' %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "Create my account", class: "btn btn-primary", id: "animatedbutton" %>
     <% end %>
   </div>
 </div>
