--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -53,7 +53,7 @@
             
           <div><p></p></div>
           
-          <%= link_to "Edit Profile", edit_person_path(current_person), {:style=>"color:#fff;"} %>
+          <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff;"} %>
           <div><p></p></div>
           <table style="width:240%">
             <tr>
